fix references alignment

--- a/styles/output/pl-marketing-pdf.css
+++ b/styles/output/pl-marketing-pdf.css
@@ -3997,6 +3997,8 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   display: table-cell;
   text-decoration: none;
   padding-right: 8px;
+  position: relative;
+  left: -2px;
 }
 
 .os-eoc.os-references-container > aside.reference > span {
